fabflix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fablix
  labels:
    app: fablix
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fablix
  template:
    metadata:
      labels:
        app: fablix
    spec:
      containers:
        - name: fablix-container
          image: sabhal35/fabflix-tomcat:latest
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
      imagePullSecrets:
        - name: regcred
