fabflix-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fablix-service
spec:
  selector:
    app: fablix
  ports:
    - name: http
      port: 8080
  type: ClusterIP
